--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <button id="dl_mode">
+        <button>
             <img src="./media/moon.png" alt="dark / light mode">
         </button>
     </div>
